Fix: fixed the test cases